# worker-api

./: .gitignore  Cargo.toml  Makefile  build.rs  go.mod  go.sum
cmd/api/: main.go
internal/: internal.go
internal/api/: routes.go
internal/api/handlers/: user.handler.go
internal/api/middlewares/: authorization.go  middleware.go
internal/config/: config.go
internal/database/: mongodb.go
pkg/grpc/proto/: auth.pb.go  auth.proto
src/: main.rs
src/db/: db.rs
src/handler/: example.rs
