[package]
name = "worker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10.0"
actix-web = "4.11.0"
env = "1.0.1"
env_logger = "0.11.8"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.2.3"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
tokio = { version = "1.45.0", features = ["full"] }
tonic = "0.13.1"
prost = "0.14.1" 

[build-dependencies]
tonic-build = "0.13.1"
